2025-09-12  Liu Hui  <liuhui1610@gmail.com>

	* tramp.el (tramp-local-environment-variable-p):
	New function.  (Bug#79413)
	(tramp-handle-make-process):
	* tramp-sh.el (tramp-sh-handle-make-process)
	(tramp-sh-handle-process-file):
	* tramp-androidsu.el (tramp-androidsu-handle-make-process):
	Use `tramp-local-environment-variable-p'.

2025-09-11  Stefan Monnier  <monnier@iro.umontreal.ca>

	* tramp.el (tramp-compat, tramp-message, tramp-integration)
	(trampver): Require them later.
	(top): Use `eval-and-compile' modifying `macro-declarations-alist'.
	(tramp-register-file-name-handlers): Don't fail during bootstrap
	before `tramp-loaddefs.el' is built.

2025-09-10  Stefan Monnier  <monnier@iro.umontreal.ca>

	* tramp-compat.el (top): Use read syntax #' for `functionp'.

2025-09-02  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-get-completion-methods):
	Use `tramp-compat-seq-keep'.

2025-08-30  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.8.0.2 released

2025-08-29  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-parse-default-user-host): Fix thinko.
	(tramp-handle-file-directory-p): Extend simple check.

2025-08-29  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-user-regexp): Exclude "[" and "]".
	(tramp-completion-make-tramp-file-name): Handle port for IPv6 hosts.
	(tramp-completion-handle-file-directory-p)
	(tramp-completion-handle-file-exists-p): Simplify.
	(tramp-completion-handle-file-name-completion): Ignore PREDICATE.
	(tramp-completion-dissect-file-name): Handle ports.
	(tramp-parse-default-user-host): Suppress '(nil nil) result.
	(tramp-parse-file): Delete duplicates.
	(tramp-parse-shosts-group): Accept also IPv6 addresses.
	(tramp-handle-file-directory-p): Return t for filenames
	"/method:foo:".
	(tramp-parse-auth-sources, tramp-parse-netrc):
	* tramp-cache.el (tramp-parse-connection-properties):
	* tramp-gvfs.el (tramp-gvfs-parse-device-names):
	Use `tramp-compat-seq-keep'.
