@@ -2556,7 +2556,7 @@ This uses \"avahi-browse\" in case D-Bus is not enabled in Avahi."
 	   (split-string
 	    (shell-command-to-string (format "avahi-browse -trkp %s" service))
 	    (rx (+ (any "\r\n"))) 'omit (rx bol "+;" (* nonl) eol)))))
-    (delete-dups
+    (seq-uniq
      (tramp-compat-seq-keep
       (lambda (x)
 	(ignore-errors
